<resources>
    <string name="app_name">REGISTRATION</string>
    <string name="user_name">USER NAME</string>
    <string name="password">PASSWORD</string>
    <string name="log_in">LOG IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="first_name">FIRST NAME</string>
    <string name="last_name">LAST NAME</string>
    <string name="red_id">RED ID</string>
    <string name="email">EMAIL</string>
    <string name="passwordsignup">P</string>
    <string name="title_activity_filter_courses">COURSE FILTER</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="majors_menu">MAJOR</string>
    <string name="levels_menu">levels</string>
    <string name="time_menu">time</string>

    <string name="hello_blank_fragment">FILTER</string>
    <string name="title">TITLE</string>
    <string name="units">UNITS</string>
    <string name="description">DESCRIPTION</string>
    <string name="add_class">ADD CLASS</string>
    <string name="prerequesite">PREREQUESITE</string>
    <string name="department">DEPARTMENT</string>
    <string name="instructor">INSTRUCTOR</string>
    <string name="schedule_no">SCHEDULE NO</string>
    <string name="start_time">START TIME</string>
    <string name="end_time">END TIME</string>
    <string name="upper">UPPER</string>
    <string name="lower">LOWER</string>
    <string name="graduate">GRADUATE</string>
    <string name="search">SEARCH</string>
    <string name="_0800">0800</string>
    <string name="_2030">2030</string>
    <string name="select_level">SELECT LEVEL</string>
    <string name="select_time">SELECT TIME</string>
    <string name="level_and_time">LEVEL AND TIME</string>
    <string name="drop_class">DROP CLASS</string>
    <string name="xxxxxx994">xxxxxx994</string>
    <string name="select_a_fliter">SELECT A FILTER</string>
    <string name="room">ROOM</string>
    <string name="registered_classes">REGISTERED CLASSES</string>
    <string name="add_classes">ADD CLASSES</string>
    <string name="waitlisted_classes">WAITLISTED CLASSES</string>
    <string name="log_out">LOG OUT</string>
</resources>
