<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.proj4.rakshithramesh.myapplication.UserInformationActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp">

            <TextView
                android:id="@+id/userFirstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/userFirstNameValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp">

            <TextView
                android:id="@+id/userLastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/userLastNameValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp">

            <TextView
                android:id="@+id/userRedId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/red_id"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/UserRedIdValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textSize="20sp" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="157dp"
        android:text="@string/registered_classes"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/waitlistButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:text="@string/waitlisted_classes"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@+id/registerButton"
        app:layout_constraintTop_toBottomOf="@+id/registerButton" />

    <Button
        android:id="@+id/addClassButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:text="@string/add_classes"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@+id/waitlistButton"
        app:layout_constraintTop_toBottomOf="@+id/waitlistButton" />

    <Button
        android:id="@+id/logOutButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="67dp"
        android:layout_marginTop="57dp"
        android:text="@string/log_out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addClassButton" />
</android.support.constraint.ConstraintLayout>
