<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.proj4.rakshithramesh.myapplication.LoginActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/redIdLabelLogin"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_marginStart="18dp"
        android:text="@string/red_id"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/redId"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/passwordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="3dp"
        android:text="@string/password"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/redId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="119dp"
        android:layout_marginEnd="26dp"
        android:layout_marginTop="123dp"
        android:ems="10"
        android:hint="@string/xxxxxx994"
        android:inputType="number"
        android:labelFor="@id/redId"
        app:layout_constraintBottom_toBottomOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:inputType="textPassword"
        android:labelFor="@id/password"
        app:layout_constraintBaseline_toBaselineOf="@+id/passwordLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/passwordLabel" />

    <Button
        android:id="@+id/logInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:text="@string/log_in"
        app:layout_constraintBaseline_toBaselineOf="@+id/signUpButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="113dp"
        android:layout_marginStart="40dp"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/logInButton" />

</android.support.constraint.ConstraintLayout>
