<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp">

            <TextView
                android:id="@+id/classTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/classTitleValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp">

            <TextView
                android:id="@+id/departmentTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/department"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/departmentTitleValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp">

            <TextView
                android:id="@+id/instructorTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/instructor"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/instructorTitleValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp">

            <TextView
                android:id="@+id/statTimeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_time"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/startTimeTitleValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp">

            <TextView
                android:id="@+id/endTimeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_time"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/endTimeTitleValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textSize="20sp" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/dropButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="159dp"
        android:text="@string/drop_class"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>